--- a/src/app.scss
+++ b/src/app.scss
@@ -3,12 +3,20 @@
     height: 100vh;
 }
 
+.container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
 .fade-enter,
 .fade-exit {
   position: absolute;
   top: 0;
   left: 0;
-  transition: 0.6s ease opacity;
+  transition: 2s ease opacity;
 }
 .fade-enter,
 .fade-exit-active {
