--- a/src/components/PagePiling.scss
+++ b/src/components/PagePiling.scss
@@ -1,11 +1,11 @@
-.scrolling-page {
+.page-piling {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }   
 
-.scrolling-page-section {
+.page-piling-section {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -13,3 +13,7 @@
     overflow-y: auto;
 }
 
+.page-piling-section > * {
+    min-width: 100%;
+    min-height: 100%;
+}
