--- a/src/global/index.scss
+++ b/src/global/index.scss
@@ -104,3 +104,43 @@ html {
     display: flex;
     align-items: center;
 }
+
+.app {
+    width: 100vw;
+    height: 100vh;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
+.page-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-section.variant-1 {
+    background: variables.$color-primary;
+    color: variables.$color-negative;
+}
+
+.page-section.variant-2 {
+    background: variables.$color-secondary;
+    color: variables.$color-negative;
+}
+
+.page-section.variant-3 {
+    background: variables.$color-tertiary;
+    color: variables.$color-negative;
+}
+
+.page-section.variant-4 {
+    background: variables.$color-accent-dark;
+    color: variables.$color-negative;
+}
