--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -5,6 +5,7 @@ $base-font-size: 10px;
 $color-dark: #444;
 $color-blue: #5C5CFF;
 $color-primary: #1B1725;
+$color-negative: #eee;
 $color-secondary: #534B62;
 $color-tertiary: #A499B3;
 $color-accent-light: #927ABF;
